--- a/css/stylo.css
+++ b/css/stylo.css
@@ -1,3 +1,21 @@
 *{
     margin: 0;
+    font-family: monospace;
+}
+h1{
+    
+    color: blue;
+    font-size: 50px;
+    text-align: center;
+
+}
+h2{
+   font-size: 35px
+}
+p{
+    font-size: 20px;
+
+}
+span{
+    color: red;
 }
